--- a/ptdocs/index.css
+++ b/ptdocs/index.css
@@ -154,7 +154,7 @@ color: #004080;
 }
 
 .sidebar .box {
-  padding:6px;
+  padding: 6px;
 /*  border: 1px dotted #e2bC3C;*/
   border: 1px solid #aaaaaa;
   -moz-border-radius: 6px;
@@ -174,6 +174,7 @@ color: #004080;
 .leftsidebar{
 width:100%;
 }
+
 .leftsidebar .box {
   padding-right: 5px;
   padding-left: 5px;
@@ -183,7 +184,7 @@ width:100%;
   -webkit-border-radius: 6px;
   border-radius: 6px;
   margin-bottom: 5px;
-  margin-top: 5px;
+  margin-top: 10px;
   margin-right:2px;
   float: left;
   /* background-color: #ffefcf; */
@@ -422,9 +423,15 @@ ul { font-weight: bolder; }
    margin:0 auto;
 }
 .left_col {
+   margin-top: 10px;
    float:left;
    width:20%;
 }
+
+.left_col .box {
+  padding-top: 25px;
+}
+
 .mid_col {
    float:right;
    width:75%;
