--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-  font-family: "Helvetica nueu", Helvetica, Arial, sans-serif;
+  font-family: "Arial", Helvetica, Arial, sans-serif;
 /*  background-color: #FFE58C; */
 }
 
