--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,8 +17,9 @@
 
 .paper-title {
     margin: 0;
-    color: #0056b3;
+    #color: #0056b3;
     font-size: 1em;
+    font-style: bold; 
 }
 
 .authors, .publisher, .links {
