--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
     margin: 0;
     #color: #0056b3;
     font-size: 1em;
-    font-style: bold; 
+    font-weight: bold; 
 }
 
 .authors, .publisher, .links {
